<resources>

    <!-- 기본 -->

    <string name="app_name">워치미</string>
    <string name="app_version_code">1</string>
    <string name="toast_exit">한 번 더 누르면 앱이 종료됩니다.</string>

    <string name="activity_main_recent_data">최근 낙상 감지 기록</string>
    <string name="activity_device_register">기기 등록</string>
    <string name="activity_contacts">응급 알림 보호자 지정</string>
    <string name="activity_emergency">워치미 : 낙상사고 발생 알림</string>
    <string name="activity_settings">설정</string>
    <string name="activity_developer">개발팀 정보</string>
    <string name="activity_open_source">오픈 소스 라이선스</string>

    <string name="main_welcome">%1$s 님 반갑습니다</string>
    <string name="main_sliding_up_panel_title_list_empty">지금까지 낙상 감지 기록이 없습니다.</string>
    <string name="main_sliding_up_panel_title">지금까지 낙상이 %1$d번 감지되었습니다.</string>

    <string name="main_cell_header_1">기본 정보</string>
    <string name="main_cell_title_birth">생년월일</string>
    <string name="main_cell_body_birth"> </string>
    <string name="main_cell_detail_birth">만 %1$d세</string>
    <string name="main_cell_title_gender">성별</string>
    <string name="main_cell_body_gender"> </string>
    <string name="main_cell_body_gender_male">남성</string>
    <string name="main_cell_body_gender_female">여성</string>
    <string name="main_cell_detail_gender"> </string>
    <string name="main_cell_detail_gender_male">Male</string>
    <string name="main_cell_detail_gender_female">Female</string>
    <string name="main_cell_title_blood_type">혈액형</string>
    <string name="main_cell_body_blood_type"> </string>
    <string name="main_cell_detail_blood_type"> </string>
    <string name="main_cell_title_disease">병력</string>
    <string name="main_cell_body_disease"> </string>
    <string name="main_cell_detail_disease">병력이 있다면 등록해주세요.</string>
    <string name="main_cell_help_1">등록된 정보는 낙상 사고 발생 시 보호자에게 전송됩니다.</string>
    <string name="main_cell_not_register">미등록</string>

    <string name="main_cell_header_2">보호자 정보</string>
    <string name="main_cell_title_protector">등록된 보호자 인원</string>
    <string name="main_cell_body_protector">총 %1$d명</string>
    <string name="main_cell_new_protector">새로운 보호자 지정</string>
    <string name="main_cell_help_2">보호자를 반드시 지정하여야 합니다.</string>

    <string name="main_cell_header_3">실내 위치 정보</string>
    <string name="main_cell_title_beacon_location">비콘 설치 장소</string>
    <string name="main_cell_body_beacon_location">집</string>
    <string name="main_cell_title_beacon_device">비콘 기기 정보</string>
    <string name="main_cell_body_beacon_device">일반 사용자는 확인 및 수정할 수 없습니다.</string>
    <string name="main_cell_help_3">비콘 영역으로 판단되면 실내 위치 정보가 활용됩니다.</string>

    <string name="main_list_empty">낙상 감지 기록이 없습니다.</string>
    <string name="main_list_record_true">정상 감지</string>
    <string name="main_list_record_false">잘못된 감지</string>

    <string name="device_register_title">반갑습니다</string>
    <string name="device_register_title_error">기기 등록을 실패하였습니다</string>
    <string name="device_register_title2">당신의 이름을 알려주세요</string>
    <string name="device_register_title2_change">당신의 전화번호를 알려주세요</string>
    <string name="device_register_title2_error">다시 시도하여 주세요</string>
    <string name="device_register_info">서비스를 이용하시려면 이용자의 기기 정보를 서버에 등록하여야 합니다.</string>
    <string name="device_register_info2">이 과정을 완료하시면 기기 정보 등록을 허용하는 것으로 간주합니다.</string>
    <string name="device_register_edit_text">이름을 입력해주세요</string>
    <string name="device_register_edit_text_phone">전화번호를 입력해주세요</string>
    <string name="device_register_button_register">등록하기</string>

    <string name="emergency_title">낙상으로 인식되었습니다</string>
    <string name="emergency_info">10초 후 지정된 보호자에게 응급 푸쉬가 발송됩니다.</string>
    <string name="emergency_button_stop">중지하기</string>

    <string name="developer_team">doIT</string>
    <string name="developer_belong_to">세종대학교 컴퓨터공학과</string>
    <string name="developer_member_1">고용국</string>
    <string name="developer_member_2">심재훈</string>
    <string name="developer_member_3">심효빈</string>
    <string name="developer_member_4">양경석</string>
    <string name="developer_member_5">허한슬</string>
    <string name="developer_exhibition">2017 한이음 공모전 출품 앱</string>

    <string name="error_title_network">네트워크에 연결되지 않았습니다.</string>
    <string name="error_body_network">로그인 서버에 접근할 수 없습니다.\n기기의 네트워크 연결 상태를 확인하여 주십시오.</string>

    <string name="info_load_user_data">이용자 인증 처리 중입니다.</string>
    <string name="info_load_list_data">이용자 데이터 처리 중입니다.</string>
    <string name="info_login_failed">로그인에 실패하였습니다.</string>
    <string name="info_emergency_delay">%1$d초 후 지정된 보호자에게 응급 푸쉬가 발송됩니다.</string>
    <string name="info_beacon">비콘 정보를 가져오고 있습니다.</string>
    <string name="info_location">위치 정보를 가져오고 있습니다.</string>
    <string name="info_send_push">지정된 모든 보호자에게 낙상사고를 알리는 중입니다.</string>
    <string name="info_send_push_complete">지정된 모든 보호자에게 낙상사고 발생을 통보하였습니다.</string>
    <string name="info_error">오류가 발생하였습니다.</string>
    <string name="info_list_refresh">새로운 데이터를 성공적으로 가져왔습니다.</string>

    <string name="dialog_ok">확인</string>
    <string name="dialog_cancel">취소</string>


    <!-- 권한 -->

    <string name="permission_dialog_title_access_fine_location">잠시 후 앱에서 요청하는 위치 데이터 접근 권한을 허용해주세요.</string>
    <string name="permission_dialog_body_access_fine_location">낙상 발생 시 이용자의 위치 정보를 파악하기 위해서는 반드시 위치(GPS) 데이터 접근 권한이 필요합니다.</string>

    <string name="permission_dialog_title_read_contacts">잠시 후 앱에서 요청하는 연락처 데이터 접근 권한을 허용해주세요.</string>
    <string name="permission_dialog_body_read_contacts">낙상 발생 시 응급 알림을 받을 보호자를 선택하기 위해서는 반드시 연락처 데이터 접근 권한이 필요합니다.</string>

    <string name="permission_dialog_title_read_phone_state">잠시 후 앱에서 요청하는 이용자 기기 상태 데이터 접근 권한을 허용해주세요.</string>
    <string name="permission_dialog_body_read_phone_state">이용자 기기의 전화번호를 가져오기 위해서는 이용자 기기 상태 데이터 접근 권한이 필요합니다.</string>

    <string name="permission_dialog_title_send_sms">잠시 후 앱에서 요청하는 문자 메시지 발신 권한을 허용해주세요.</string>
    <string name="permission_dialog_body_send_sms">낙상 발생 시 보호자에게 문자 메시지를 이용하여 사고를 통지하기 위해서는 문자 메시지 발신 권한이 필요합니다.</string>

    <string name="permission_dialog_title_deny">필수 접근 권한 거부</string>
    <string name="permission_toast_allow_access_fine_location">위치 데이터 접근 권한을 허용하셨습니다.</string>
    <string name="permission_toast_allow_read_contacts">연락처 데이터 접근 권한을 허용하셨습니다.</string>
    <string name="permission_toast_allow_read_phone_state">이용자 기기 상태 데이터 접근 권한을 허용하셨습니다.</string>
    <string name="permission_toast_allow_send_sms">문자 메시지 발신 권한을 허용하셨습니다.</string>


    <!-- 설정 -->

    <string name="action_settings">설정</string>

    <string name="pref_header_generals">일반</string>
    <string name="pref_generals_category_1">낙상사고 통지</string>
    <string name="pref_title_notify_emergency">전송 방법</string>

    <string name="pref_header_modes">이용자 모드</string>
    <string name="pref_title_user_mode">보호자 모드로 전환</string>
    <string name="pref_description_user_mode">보호자 모드로 전환하면 낙상 인식을 더 이상 수행하지 않습니다.</string>

    <string name="pref_header_notifications">알림</string>
    <string name="pref_title_new_message_notifications">앱 푸시 수신</string>
    <string name="pref_description_new_message_notifications">앱 푸시를 수신하게 되면 새로운 정보를 실시간으로 제공받을 수 있습니다.</string>
    <string name="pref_title_ringtone">푸시 알림음</string>
    <string name="pref_ringtone_silent">무음</string>
    <string name="pref_title_vibrate">푸시 진동</string>
    <string name="pref_title_recommend_notifications">앱 푸시 권장 안내</string>
    <string name="pref_description_recommend_notifications">앱 푸시 수신이 거부 상태일 때 푸시 수신을 권장하는 안내를 제공받을 수 있습니다.</string>

    <string name="pref_header_information">정보</string>
    <string name="pref_app_version">앱 버전</string>
    <string name="pref_app_version_summary">v 0.1</string>
    <string name="pref_developer">기획/개발</string>
    <string name="pref_developer_summary">doIT (세종대학교 컴퓨터공학과)</string>
    <string name="pref_mentor">도움</string>
    <string name="pref_mentor_summary">신재용 멘토님 ((주)데이타뱅크시스템즈)</string>
    <string name="pref_project">2017 한이음 공모전 출품 앱</string>
    <string name="pref_open_source_license">오픈 소스 라이선스</string>
</resources>
