<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/pref_app_version"
        android:summary="@string/pref_app_version_summary" />

    <Preference
        android:title="@string/pref_developer"
        android:summary="@string/pref_developer_summary">
        <intent
            android:targetClass="com.lattechiffon.hanium.DeveloperActivity"
            android:targetPackage="com.lattechiffon.hanium" />
    </Preference>

    <Preference
        android:title="@string/pref_project" />

    <Preference
        android:title="@string/pref_open_source_license">
        <intent
            android:targetClass="com.lattechiffon.hanium.OpenSourceActivity"
            android:targetPackage="com.lattechiffon.hanium" />
    </Preference>

</PreferenceScreen>
