<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lattechiffon.hanium.DeveloperActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/developer_team"
            android:textSize="80sp"
            android:textStyle="bold"
            android:textColor="#ff000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/developer_belong_to"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#ff000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/developer_member_1"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#ff000000"
            android:layout_marginTop="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/developer_member_2"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#ff000000"
            android:layout_marginTop="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/developer_member_3"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#ff000000"
            android:layout_marginTop="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/developer_member_4"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#ff000000"
            android:layout_marginTop="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/developer_member_5"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#ff000000"
            android:layout_marginTop="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/developer_exhibition"
            android:textSize="15sp"
            android:textColor="#ff000000"
            android:layout_marginTop="30sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
